IGNITE-14871 Add cluster initialization commands to the Ignite CLI
- use repeated style to specify options with multiple values